--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -39,7 +39,7 @@
     <div class="contact-main">
         <div class="about-container">
             <div class="profile-container">
-                <div class="profile">
+                <div class="about-profile">
                     <img src="/images/roy.png" alt="roy">
                 </div>
                 <div class="contact-info">
